# parquet_analyze

./: .gitignore  CMakeLists.txt  Dockerfile  NOTICE  README.md  docker-compose.yaml
cli/: CMakeLists.txt  main.cpp
cli/include/: CMakeLists.txt
cli/include/parquet_analyze_cli/: metadata_service.hpp  parquet_analyze_flight_client.hpp
cli/src/: CMakeLists.txt  metadata_service.cpp  parquet_analyze_flight_client.cpp
data/: README.md
protos/: CMakeLists.txt  query.proto
server/: CMakeLists.txt  main.cpp
server/include/: CMakeLists.txt
server/include/parquet_analyze_server/: parquet_analyze_service_impl.hpp
server/src/: CMakeLists.txt  parquet_analyze_service_impl.cpp
